--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
 
 <body>
 
+        <div class="row">
+
+            <div class="col-lg-6 bg-primary">
+                <h1>HEL</h1>
+
+            </div>
+        </div>
+    </div>
+
     
 
 </body>
