--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
             <div class="col-lg-5 bg-light info">
                 <div class="inner-info">
-                    <h1>BLACK JOKES</h1>
+                    <h1>BLACK JOKES 😂</h1>
+                    
 
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam itaque velit natus aspernatur quos maxime doloremque, voluptates deleniti quae nihil iure officia possimus sapiente, rerum eveniet expedita earum quod repudiandae.
