--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             </div>
 
-            <div class="col-lg-6">
+            <div class="col-lg-6 joke-container">
                 <div class="inner-form">
                     <h1 class="title">Random Jokes Generator</h1>
                     <div class="container">
