--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
                     <h1 class="title">Random Jokes Generator</h1>
                     <div class="container">
                     <div class="joke">
-                        <p></p>
+                        <p id="display-content">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus aspernatur non consectetur vel voluptates. Numquam eveniet perferendis ullam, minus aspernatur laudantium delectus iure mollitia necessitatibus, magni consequatur, corrupti soluta facere.
+                        </p>
                     </div>
                     <button class="btn btn-primary">Get Joke</button>
                     
