--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <div class="col-lg-6 joke-container">
                 <div class="inner-form">
-                    <h1 class="title">Random Jokes Generator</h1>
+                    <h1 class="title">JOKES GENERATOR</h1>
                     <div class="container">
                     <div class="joke">
                         <p id="display-content">
