--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div class="row content">
 
-            <div class="col-lg-5 bg-light info">
+            <div class="col-lg-5 bg-dark info">
                 <div class="inner-info">
                     <h1>BLACK JOKES 😂</h1>
                     
