--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
                     <p>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam itaque velit natus aspernatur quos maxime doloremque, voluptates deleniti quae nihil iure officia possimus sapiente, rerum eveniet expedita earum quod repudiandae.
                     </p>
+
+                    <button class="btn btn-primary">
+                        <a href="https://codewithkevin.netlify.app/">
+                            Portfolio
+                        </a>
+                    </button>
                 </div>
 
             </div>
