--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam itaque velit natus aspernatur quos maxime doloremque, voluptates deleniti quae nihil iure officia possimus sapiente, rerum eveniet expedita earum quod repudiandae.
                     </p>
 
-                    <button class="btn btn-primary">
+                    <button class="btn btn-primary portfolio">
                         <a href="https://codewithkevin.netlify.app/">
                             Portfolio
                         </a>
