--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                     <h1>BLACK JOKES 😂</h1>
                     
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam itaque velit natus aspernatur quos maxime doloremque, voluptates deleniti quae nihil iure officia possimus sapiente, rerum eveniet expedita earum quod repudiandae.
+                        This website is owned by <a href="https://codewithkevin.netlify.app/">codewithkev</a>.
+                        <br>A simple website that generte jokes and time you click on generate jokes button.
                     </p>
 
                     <button class="btn btn-primary portfolio">
