--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     
                     <p>
                         This website is owned by <a href="https://codewithkevin.netlify.app/">codewithkev</a>.
-                        <br>A simple website that generte jokes and time you click on generate jokes button.
+                        <br>A simple website that generate jokes any time you click on generate jokes button.
                     </p>
 
                     <button class="btn btn-primary portfolio">
